--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {
     "axios": "^1.3.4",
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
