--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
